# iS3D

./: .gitignore  .travis.yml  CMakeLists.txt  Distribution Functions.nb  GNUmakefile  LICENSE  Modified Spectra.nb  Modified Spectra_OptGbl_300MeV.nb  Modified Spectra_OptGbl_500MeV.nb  Modified Spectra_OptGbl_500MeV_test_high_time_res.nb  Modified Spectra_OptGbl_500MeV_test_low_time_res.nb  Modified Spectra_OptGbl_500MeV_zeta155.nb  Modified Spectra_OptGbl_500MeV_zeta180.nb  Modified Spectra_OptGbl_500MeV_zeta180_redo.nb  Modified Spectra_OptGbl_500MeV_zeta200.nb  Modified Spectra_OptGbl_600MeV.nb  README.md  Rho_resonance_decay_example.nb  Rho_three_body_decay.nb  Rho_two_body_decay.nb  cleanMake.sh  cleanMakeCPU.sh  cleanMakeGPU.sh  configure  iS3D.e  iS3D.sublime-project  oversample.sh  runCPU.sh  run_many_samplings.sh~  test_omp.sh
generate_delta_f_coefficients/smash_box/df_vh_dimensionless/: Makefile  (+3 more)
src/cpp/: #emissionfunction.cpp#  #readindata.cpp#  .#readindata.h  CMakeLists.txt  GNUmakefile  ParameterReader.cpp  ParameterReader.h  RuniS3D.cpp  RuniS3DWrapper.cpp  Table.cpp  Table.h  arsenal.cpp  arsenal.h  deltafReader.cpp  deltafReader.h  emissionfunction.cpp  emissionfunction.h  emissionfunction_polzn_kernels.cpp  emissionfunction_resonance_decays.cpp  emissionfunction_sampling_kernels.cpp  emissionfunction_smooth_kernels.cpp  gaussThermal.cpp  gaussThermal.h  iS.e  iS3D.cpp  iS3D.e  iS3D.h  iS3DWrapper.cpp  iS3DWrapper.h  main.cpp  main.go  particle.h  readindata.cpp  readindata.h  resonanceDecays.cpp  resonance_decays.cpp  resonance_decays_alternative.cpp  smooth_kernels.cpp  viscous_correction.cpp  viscous_correction.h
(+134 files in other folders)
